--- a/css/sections/subscribe.css
+++ b/css/sections/subscribe.css
@@ -62,8 +62,20 @@
 
 .subscription__form button {
     padding: 20px;
+    border-radius: 36px;
+    min-width: 212px;
+    outline: none;
+    border: none;
+    background-color: var(--secondary-color);
 
-    min-width: 180px;
-    font-size: 16px;
-    font-w
+    cursor: pointer;
+
+    color: white;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 23px;
+}
+
+.subscription__form button::hover {
+    background-color: var(--primary-color);
 }
